--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,7 @@
 # See http://help.github.com/ignore-files/ for more about ignoring files.
 
+.tamagui
+
 # compiled output
 dist
 tmp
@@ -316,4 +318,3 @@ yarn-error.log
 
 # testing
 /coverage
-
