--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-native": "0.71.10",
+    "tamagui": "^1.38.4",
     "tslib": "^2.3.0"
   },
   "devDependencies": {
@@ -22,6 +23,7 @@
     "@react-native-community/cli": "10.2.2",
     "@react-native-community/cli-platform-android": "10.2.0",
     "@react-native-community/cli-platform-ios": "10.2.1",
+    "@tamagui/babel-plugin": "^1.38.4",
     "@testing-library/jest-dom": "5.16.5",
     "@testing-library/jest-native": "5.4.2",
     "@testing-library/react-native": "12.1.2",
@@ -29,16 +31,23 @@
     "@types/node": "18.14.4",
     "@types/react": "18.0.28",
     "@types/react-native": "0.71.7",
-    "@typescript-eslint/eslint-plugin": "^5.60.1",
+    "@typescript-eslint/eslint-plugin": "^5.61.0",
     "@typescript-eslint/parser": "^5.60.1",
     "babel-jest": "^29.4.1",
+    "babel-plugin-transform-inline-environment-variables": "^0.4.4",
+    "cross-env": "^7.0.3",
     "detox": "^20.9.0",
     "eslint": "~8.15.0",
+    "eslint-config-airbnb-base": "^15.0.0",
     "eslint-config-prettier": "8.1.0",
-    "eslint-plugin-import": "2.27.5",
+    "eslint-config-promise": "^2.0.2",
+    "eslint-config-react": "^1.1.7",
+    "eslint-import-resolver-typescript": "^3.5.5",
+    "eslint-plugin-import": "^2.27.5",
     "eslint-plugin-jsx-a11y": "6.7.1",
+    "eslint-plugin-promise": "^6.1.1",
     "eslint-plugin-react": "7.32.2",
-    "eslint-plugin-react-hooks": "4.6.0",
+    "eslint-plugin-react-hooks": "^4.6.0",
     "jest": "^29.4.1",
     "jest-circus": "^29.4.1",
     "jest-environment-jsdom": "^29.4.1",
@@ -55,6 +64,10 @@
     "react-test-renderer": "18.2.0",
     "ts-jest": "^29.1.0",
     "ts-node": "10.9.1",
-    "typescript": "~5.1.3"
+    "typescript": "~5.1.3",
+    "verdaccio": "^5.0.4"
+  },
+  "nx": {
+    "includedScripts": []
   }
 }
