--- a/apps/maelstorm/project.json
+++ b/apps/maelstorm/project.json
@@ -13,7 +13,7 @@
     "serve": {
       "executor": "nx:run-commands",
       "options": {
-        "command": "nx start maelstorm"
+        "command": "cross-env TAMAGUI_TARGET=native nx start maelstorm"
       }
     },
     "run-ios": {
@@ -22,7 +22,9 @@
     },
     "bundle-ios": {
       "executor": "@nx/react-native:bundle",
-      "outputs": ["{options.bundleOutput}"],
+      "outputs": [
+        "{options.bundleOutput}"
+      ],
       "options": {
         "entryFile": "src/main.tsx",
         "platform": "ios",
@@ -43,7 +45,9 @@
     },
     "build-ios": {
       "executor": "@nx/react-native:build-ios",
-      "outputs": ["{projectRoot}/ios/build/Build"],
+      "outputs": [
+        "{projectRoot}/ios/build/Build"
+      ],
       "options": {}
     },
     "pod-install": {
@@ -52,7 +56,9 @@
     },
     "bundle-android": {
       "executor": "@nx/react-native:bundle",
-      "outputs": ["{options.bundleOutput}"],
+      "outputs": [
+        "{options.bundleOutput}"
+      ],
       "options": {
         "entryFile": "src/main.tsx",
         "platform": "android",
@@ -69,14 +75,20 @@
     },
     "lint": {
       "executor": "@nx/linter:eslint",
-      "outputs": ["{options.outputFile}"],
+      "outputs": [
+        "{options.outputFile}"
+      ],
       "options": {
-        "lintFilePatterns": ["apps/maelstorm/**/*.{ts,tsx,js,jsx}"]
+        "lintFilePatterns": [
+          "apps/maelstorm/**/*.{ts,tsx,js,jsx}"
+        ]
       }
     },
     "test": {
       "executor": "@nx/jest:jest",
-      "outputs": ["{workspaceRoot}/coverage/{projectRoot}"],
+      "outputs": [
+        "{workspaceRoot}/coverage/{projectRoot}"
+      ],
       "options": {
         "jestConfig": "apps/maelstorm/jest.config.ts",
         "passWithNoTests": true
