--- a/package.json
+++ b/package.json
@@ -5,6 +5,8 @@
   "scripts": {},
   "private": true,
   "dependencies": {
+    "@tanstack/react-query": "^4.29.19",
+    "axios": "^1.4.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-native": "0.71.10",
