--- a/apps/maelstorm/package.json
+++ b/apps/maelstorm/package.json
@@ -8,6 +8,14 @@
     "react": "*",
     "react-native": "*",
     "react-native-svg": "*",
-    "metro-config": "*"
+    "metro-config": "*",
+    "react-native-reanimated": "*",
+    "react-native-gesture-handler": "*",
+    "tamagui": "*",
+    "@tanstack/react-query": "*",
+    "react-native-exception-handler": "*",
+    "react-native-restart": "*",
+    "@react-native-community/netinfo": "*",
+    "axios": "*"
   }
 }
