--- a/package.json
+++ b/package.json
@@ -5,11 +5,18 @@
   "scripts": {},
   "private": true,
   "dependencies": {
+    "@react-native-community/netinfo": "^9.4.1",
     "@tanstack/react-query": "^4.29.19",
     "axios": "^1.4.0",
+    "moti": "^0.25.3",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-native": "0.71.10",
+    "react-native-error-boundary": "^1.2.3",
+    "react-native-exception-handler": "^2.10.10",
+    "react-native-gesture-handler": "^2.12.0",
+    "react-native-reanimated": "^3.3.0",
+    "react-native-restart": "^0.0.27",
     "tamagui": "^1.38.4",
     "tslib": "^2.3.0"
   },
