--- a/apps/maelstorm/project.json
+++ b/apps/maelstorm/project.json
@@ -22,9 +22,7 @@
     },
     "bundle-ios": {
       "executor": "@nx/react-native:bundle",
-      "outputs": [
-        "{options.bundleOutput}"
-      ],
+      "outputs": ["{options.bundleOutput}"],
       "options": {
         "entryFile": "src/main.tsx",
         "platform": "ios",
@@ -45,9 +43,7 @@
     },
     "build-ios": {
       "executor": "@nx/react-native:build-ios",
-      "outputs": [
-        "{projectRoot}/ios/build/Build"
-      ],
+      "outputs": ["{projectRoot}/ios/build/Build"],
       "options": {}
     },
     "pod-install": {
@@ -56,9 +52,7 @@
     },
     "bundle-android": {
       "executor": "@nx/react-native:bundle",
-      "outputs": [
-        "{options.bundleOutput}"
-      ],
+      "outputs": ["{options.bundleOutput}"],
       "options": {
         "entryFile": "src/main.tsx",
         "platform": "android",
@@ -75,20 +69,14 @@
     },
     "lint": {
       "executor": "@nx/linter:eslint",
-      "outputs": [
-        "{options.outputFile}"
-      ],
+      "outputs": ["{options.outputFile}"],
       "options": {
-        "lintFilePatterns": [
-          "apps/maelstorm/**/*.{ts,tsx,js,jsx}"
-        ]
+        "lintFilePatterns": ["apps/maelstorm/**/*.{ts,tsx,js,jsx}"]
       }
     },
     "test": {
       "executor": "@nx/jest:jest",
-      "outputs": [
-        "{workspaceRoot}/coverage/{projectRoot}"
-      ],
+      "outputs": ["{workspaceRoot}/coverage/{projectRoot}"],
       "options": {
         "jestConfig": "apps/maelstorm/jest.config.ts",
         "passWithNoTests": true
@@ -98,6 +86,14 @@
           "ci": true,
           "codeCoverage": true
         }
+      }
+    },
+    "storybook": {
+      "executor": "@nx/react-native:storybook",
+      "options": {
+        "searchDir": ["libs/components/src"],
+        "outputFile": "./.storybook/story-loader.js",
+        "pattern": "**/*.stories.@(js|jsx|ts|tsx|md)"
       }
     }
   },
