--- a/package.json
+++ b/package.json
@@ -6,6 +6,13 @@
   "private": true,
   "dependencies": {
     "@react-native-community/netinfo": "^9.4.1",
+    "@react-navigation/native": "^6.1.7",
+    "@react-navigation/native-stack": "^6.9.13",
+    "@tamagui/animations-moti": "^1.39.1",
+    "@tamagui/config": "^1.39.1",
+    "@tamagui/react-native-media-driver": "^1.39.1",
+    "@tamagui/shorthands": "^1.39.1",
+    "@tamagui/themes": "^1.39.1",
     "@tanstack/react-query": "^4.29.19",
     "axios": "^1.4.0",
     "moti": "^0.25.3",
@@ -17,6 +24,7 @@
     "react-native-gesture-handler": "^2.12.0",
     "react-native-reanimated": "^3.3.0",
     "react-native-restart": "^0.0.27",
+    "react-native-screens": "^3.22.1",
     "tamagui": "^1.38.4",
     "tslib": "^2.3.0"
   },
@@ -28,10 +36,19 @@
     "@nx/js": "16.5.0",
     "@nx/linter": "16.5.0",
     "@nx/react-native": "16.5.0",
+    "@nx/storybook": "16.5.0",
     "@nx/workspace": "16.5.0",
+    "@react-native-async-storage/async-storage": "1.18.2",
     "@react-native-community/cli": "10.2.2",
     "@react-native-community/cli-platform-android": "10.2.0",
     "@react-native-community/cli-platform-ios": "10.2.1",
+    "@storybook/addon-essentials": "6.5.3",
+    "@storybook/addon-ondevice-actions": "^6.5.3",
+    "@storybook/addon-ondevice-backgrounds": "^6.5.3",
+    "@storybook/addon-ondevice-controls": "^6.5.3",
+    "@storybook/addon-ondevice-notes": "^6.5.3",
+    "@storybook/core-server": "6.5.3",
+    "@storybook/react-native": "^6.5.3",
     "@tamagui/babel-plugin": "^1.38.4",
     "@testing-library/jest-dom": "5.16.5",
     "@testing-library/jest-native": "5.4.2",
@@ -68,6 +85,7 @@
     "metro-resolver": "0.74.1",
     "nx": "16.5.0",
     "prettier": "^2.6.2",
+    "react-native-safe-area-context": "4.5.3",
     "react-native-svg": "13.9.0",
     "react-native-svg-transformer": "1.0.0",
     "react-test-renderer": "18.2.0",
