--- a/apps/maelstorm/ios/Maelstorm/Info.plist
+++ b/apps/maelstorm/ios/Maelstorm/Info.plist
@@ -36,7 +36,7 @@
 		</dict>
 	</dict>
 	<key>NSLocationWhenInUseUsageDescription</key>
-	<string></string>
+	<string/>
 	<key>UILaunchStoryboardName</key>
 	<string>LaunchScreen</string>
 	<key>UIRequiredDeviceCapabilities</key>
@@ -51,5 +51,17 @@
 	</array>
 	<key>UIViewControllerBasedStatusBarAppearance</key>
 	<false/>
+	<key>UIAppFonts</key>
+	<array>
+		<string>Assistant-Bold.ttf</string>
+		<string>Assistant-ExtraLight.ttf</string>
+		<string>Assistant-Medium.ttf</string>
+		<string>Assistant-Regular.ttf</string>
+		<string>Assistant-SemiBold.ttf</string>
+		<string>Exo2-Black.ttf</string>
+		<string>Exo2-BlackItalic.ttf</string>
+		<string>Exo2-Light.ttf</string>
+		<string>Exo2-LightItalic.ttf</string>
+	</array>
 </dict>
 </plist>
