Scaffold basic Routes
Signed-off-by: Christhopher Lion <christhopherleao@icloud.com>

--- a/apps/maelstorm/package.json
+++ b/apps/maelstorm/package.json
@@ -3,29 +3,34 @@
   "version": "0.0.1",
   "private": true,
   "dependencies": {
-    "@testing-library/jest-native": "*",
-    "@testing-library/react-native": "*",
-    "react": "*",
-    "react-native": "*",
-    "react-native-svg": "*",
-    "metro-config": "*",
-    "react-native-reanimated": "*",
-    "react-native-gesture-handler": "*",
-    "tamagui": "*",
-    "@tanstack/react-query": "*",
-    "react-native-exception-handler": "*",
-    "react-native-restart": "*",
+    "@react-native-async-storage/async-storage": "*",
     "@react-native-community/netinfo": "*",
-    "axios": "*",
-    "@storybook/react-native": "*",
+    "@react-navigation/native": "*",
+    "@react-navigation/native-stack": "*",
     "@storybook/addon-ondevice-actions": "*",
     "@storybook/addon-ondevice-backgrounds": "*",
     "@storybook/addon-ondevice-controls": "*",
     "@storybook/addon-ondevice-notes": "*",
-    "@react-native-async-storage/async-storage": "*",
-    "react-native-safe-area-context": "*",
+    "@storybook/react-native": "*",
+    "@tamagui/animations-moti": "*",
     "@tamagui/config": "*",
     "@tamagui/react-native-media-driver": "*",
-    "@tamagui/animations-moti": "*"
+    "@tanstack/react-query": "*",
+    "@testing-library/jest-native": "*",
+    "@testing-library/react-native": "*",
+    "axios": "*",
+    "metro-config": "*",
+    "react": "*",
+    "react-native": "*",
+    "react-native-exception-handler": "*",
+    "react-native-gesture-handler": "*",
+    "react-native-reanimated": "*",
+    "react-native-restart": "*",
+    "react-native-safe-area-context": "*",
+    "react-native-screens": "*",
+    "react-native-svg": "*",
+    "tamagui": "*",
+    "lodash": "*",
+    "@react-navigation/stack": "*"
   }
 }
