--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "@react-native-community/netinfo": "^9.4.1",
     "@react-navigation/native": "^6.1.7",
     "@react-navigation/native-stack": "^6.9.13",
+    "@react-navigation/stack": "^6.3.17",
     "@tamagui/animations-moti": "^1.39.1",
     "@tamagui/config": "^1.39.1",
     "@tamagui/react-native-media-driver": "^1.39.1",
@@ -15,6 +16,7 @@
     "@tamagui/themes": "^1.39.1",
     "@tanstack/react-query": "^4.29.19",
     "axios": "^1.4.0",
+    "lodash": "^4.17.21",
     "moti": "^0.25.3",
     "react": "18.2.0",
     "react-dom": "18.2.0",
