--- a/libs/components/tsconfig.json
+++ b/libs/components/tsconfig.json
@@ -1,7 +1,7 @@
 {
   "extends": "../../tsconfig.base.json",
   "compilerOptions": {
-    "jsx": "react-jsx",
+    "jsx": "react-native",
     "allowJs": true,
     "esModuleInterop": true,
     "allowSyntheticDefaultImports": true,
