--- a/apps/maelstorm/package.json
+++ b/apps/maelstorm/package.json
@@ -31,6 +31,9 @@
     "react-native-svg": "*",
     "tamagui": "*",
     "lodash": "*",
-    "@react-navigation/stack": "*"
+    "@react-navigation/stack": "*",
+    "react-native-error-boundary": "*",
+    "@tanstack/query-async-storage-persister": "*",
+    "@tanstack/react-query-persist-client": "*"
   }
 }
