--- a/package.json
+++ b/package.json
@@ -14,13 +14,15 @@
     "@tamagui/react-native-media-driver": "^1.39.1",
     "@tamagui/shorthands": "^1.39.1",
     "@tamagui/themes": "^1.39.1",
+    "@tanstack/query-async-storage-persister": "^4.29.19",
     "@tanstack/react-query": "^4.29.19",
+    "@tanstack/react-query-persist-client": "^4.29.19",
     "axios": "^1.4.0",
     "lodash": "^4.17.21",
     "moti": "^0.25.3",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "react-native": "0.71.10",
+    "react-native": "0.71.12",
     "react-native-error-boundary": "^1.2.3",
     "react-native-exception-handler": "^2.10.10",
     "react-native-gesture-handler": "^2.12.0",
