--- a/apps/maelstorm/package.json
+++ b/apps/maelstorm/package.json
@@ -7,6 +7,7 @@
     "@react-native-community/netinfo": "*",
     "@react-navigation/native": "*",
     "@react-navigation/native-stack": "*",
+    "@react-navigation/stack": "*",
     "@storybook/addon-ondevice-actions": "*",
     "@storybook/addon-ondevice-backgrounds": "*",
     "@storybook/addon-ondevice-controls": "*",
@@ -15,27 +16,27 @@
     "@tamagui/animations-moti": "*",
     "@tamagui/config": "*",
     "@tamagui/react-native-media-driver": "*",
+    "@tanstack/query-async-storage-persister": "*",
     "@tanstack/react-query": "*",
+    "@tanstack/react-query-persist-client": "*",
     "@testing-library/jest-native": "*",
     "@testing-library/react-native": "*",
     "axios": "*",
+    "lodash": "*",
     "metro-config": "*",
+    "moti": "*",
     "react": "*",
     "react-native": "*",
+    "react-native-error-boundary": "*",
     "react-native-exception-handler": "*",
     "react-native-gesture-handler": "*",
     "react-native-reanimated": "*",
     "react-native-restart": "*",
     "react-native-safe-area-context": "*",
     "react-native-screens": "*",
+    "react-native-splash-screen": "*",
     "react-native-svg": "*",
     "tamagui": "*",
-    "lodash": "*",
-    "@react-navigation/stack": "*",
-    "react-native-error-boundary": "*",
-    "@tanstack/query-async-storage-persister": "*",
-    "@tanstack/react-query-persist-client": "*",
-    "react-native-splash-screen": "*",
     "use-debounce": "*"
   }
 }
