--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "@react-navigation/native": "^6.1.7",
     "@react-navigation/native-stack": "^6.9.13",
     "@react-navigation/stack": "^6.3.17",
+    "@reduxjs/toolkit": "^1.9.5",
     "@tamagui/animations-moti": "^1.39.1",
     "@tamagui/config": "^1.39.1",
     "@tamagui/react-native-media-driver": "^1.39.1",
@@ -30,6 +31,7 @@
     "react-native-restart": "^0.0.27",
     "react-native-screens": "^3.22.1",
     "react-native-splash-screen": "^3.3.0",
+    "react-redux": "^8.1.1",
     "tamagui": "^1.38.4",
     "tslib": "^2.3.0",
     "use-debounce": "^9.0.4"
