--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -19,23 +19,26 @@ env:
   CI: true
   NX_DAEMON: false
   TAMAGUI_TARGET: native
-  API_URL: ${{ secrets.API_URL }}
   OPEN_WEATHER_API_KEY: ${{ secrets.OPEN_WEATHER_API_KEY }}
 
 jobs:
   lint:
+    permissions: write-all
     if: github.event.pull_request.draft != true
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v3
         with:
           fetch-depth: 0
-      - uses: nrwl/nx-set-shas@v3
-        with:
-          main-branch-name: 'development'
+
       - uses: actions/setup-node@v3
         with:
           cache: 'yarn'
+
+      - uses: nrwl/nx-set-shas@v3
+        with:
+          main-branch-name: 'master'
+
       - run: yarn install --frozen-lockfile --silent --non-interactive
 
       - run: yarn nx affected --target=lint
