--- a/apps/maelstorm/package.json
+++ b/apps/maelstorm/package.json
@@ -37,6 +37,9 @@
     "react-native-splash-screen": "*",
     "react-native-svg": "*",
     "tamagui": "*",
-    "use-debounce": "*"
+    "use-debounce": "*",
+    "react-redux": "*",
+    "@reduxjs/toolkit": "*",
+    "dayjs": "*"
   }
 }
