--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@tanstack/react-query": "^4.29.19",
     "@tanstack/react-query-persist-client": "^4.29.19",
     "axios": "^1.4.0",
+    "dayjs": "^1.11.9",
     "lodash": "^4.17.21",
     "moti": "^0.25.3",
     "react": "18.2.0",
