--- a/package.json
+++ b/package.json
@@ -10,11 +10,11 @@
     "@react-navigation/native-stack": "^6.9.13",
     "@react-navigation/stack": "^6.3.17",
     "@reduxjs/toolkit": "^1.9.5",
-    "@tamagui/animations-moti": "^1.39.1",
-    "@tamagui/config": "^1.39.1",
-    "@tamagui/react-native-media-driver": "^1.39.1",
-    "@tamagui/shorthands": "^1.39.1",
-    "@tamagui/themes": "^1.39.1",
+    "@tamagui/animations-moti": "^1.39.5",
+    "@tamagui/config": "^1.39.5",
+    "@tamagui/react-native-media-driver": "^1.39.5",
+    "@tamagui/shorthands": "^1.39.5",
+    "@tamagui/themes": "^1.39.5",
     "@tanstack/query-async-storage-persister": "^4.29.19",
     "@tanstack/react-query": "^4.29.19",
     "@tanstack/react-query-persist-client": "^4.29.19",
@@ -33,7 +33,7 @@
     "react-native-screens": "^3.22.1",
     "react-native-splash-screen": "^3.3.0",
     "react-redux": "^8.1.1",
-    "tamagui": "^1.38.4",
+    "tamagui": "^1.39.5",
     "tslib": "^2.3.0",
     "use-debounce": "^9.0.4"
   },
@@ -47,34 +47,34 @@
     "@nx/react-native": "16.5.0",
     "@nx/storybook": "16.5.0",
     "@nx/workspace": "16.5.0",
-    "@react-native-async-storage/async-storage": "1.18.2",
+    "@react-native-async-storage/async-storage": "^1.18.2",
     "@react-native-community/cli": "10.2.2",
     "@react-native-community/cli-platform-android": "10.2.0",
     "@react-native-community/cli-platform-ios": "10.2.1",
-    "@storybook/addon-essentials": "6.5.3",
-    "@storybook/addon-ondevice-actions": "^6.5.3",
-    "@storybook/addon-ondevice-backgrounds": "^6.5.3",
-    "@storybook/addon-ondevice-controls": "^6.5.3",
-    "@storybook/addon-ondevice-notes": "^6.5.3",
-    "@storybook/core-server": "6.5.3",
-    "@storybook/react-native": "^6.5.3",
-    "@tamagui/babel-plugin": "^1.38.4",
+    "@storybook/addon-essentials": "6.5.4",
+    "@storybook/addon-ondevice-actions": "^6.5.4",
+    "@storybook/addon-ondevice-backgrounds": "^6.5.4",
+    "@storybook/addon-ondevice-controls": "^6.5.4",
+    "@storybook/addon-ondevice-notes": "^6.5.4",
+    "@storybook/core-server": "6.5.4",
+    "@storybook/react-native": "^6.5.4",
+    "@tamagui/babel-plugin": "^1.39.5",
     "@testing-library/jest-dom": "5.16.5",
     "@testing-library/jest-native": "5.4.2",
     "@testing-library/react-native": "12.1.2",
-    "@types/jest": "^29.4.0",
+    "@types/jest": "^29.5.2",
     "@types/node": "18.14.4",
-    "@types/react": "18.0.28",
-    "@types/react-native": "0.71.7",
+    "@types/react": "18.2.14",
+    "@types/react-native": "^0.71.8",
     "@typescript-eslint/eslint-plugin": "^5.61.0",
-    "@typescript-eslint/parser": "^5.60.1",
+    "@typescript-eslint/parser": "^5.61.0",
     "babel-jest": "^29.4.1",
     "babel-plugin-transform-inline-environment-variables": "^0.4.4",
     "cross-env": "^7.0.3",
     "detox": "^20.9.0",
-    "eslint": "~8.15.0",
+    "eslint": "~8.44.0",
     "eslint-config-airbnb-base": "^15.0.0",
-    "eslint-config-prettier": "8.1.0",
+    "eslint-config-prettier": "8.8.0",
     "eslint-config-promise": "^2.0.2",
     "eslint-config-react": "^1.1.7",
     "eslint-import-resolver-typescript": "^3.5.5",
@@ -83,9 +83,9 @@
     "eslint-plugin-promise": "^6.1.1",
     "eslint-plugin-react": "7.32.2",
     "eslint-plugin-react-hooks": "^4.6.0",
-    "jest": "^29.4.1",
-    "jest-circus": "^29.4.1",
-    "jest-environment-jsdom": "^29.4.1",
+    "jest": "^29.6.1",
+    "jest-circus": "^29.6.1",
+    "jest-environment-jsdom": "^29.6.1",
     "jest-react-native": "18.0.0",
     "metro": "0.74.1",
     "metro-babel-register": "0.74.1",
@@ -94,13 +94,13 @@
     "metro-resolver": "0.74.1",
     "nx": "16.5.0",
     "prettier": "^2.6.2",
-    "react-native-safe-area-context": "4.5.3",
-    "react-native-svg": "13.9.0",
+    "react-native-safe-area-context": "4.6.4",
+    "react-native-svg": "13.10.0",
     "react-native-svg-transformer": "1.0.0",
     "react-test-renderer": "18.2.0",
-    "ts-jest": "^29.1.0",
+    "ts-jest": "^29.1.1",
     "ts-node": "10.9.1",
-    "typescript": "~5.1.3",
+    "typescript": "~5.1.6",
     "verdaccio": "^5.0.4"
   },
   "nx": {
