update and use ENV vars
Signed-off-by: Christhopher Lion <christhopherleao@icloud.com>

--- a/apps/maelstorm/project.json
+++ b/apps/maelstorm/project.json
@@ -39,7 +39,9 @@
         "{projectRoot}/android/app/build/outputs/bundle",
         "{projectRoot}/android/app/build/outputs/apk"
       ],
-      "options": {}
+      "options": {
+        "mode": "release"
+      }
     },
     "build-ios": {
       "executor": "@nx/react-native:build-ios",
