--- a/apps/maelstorm/tsconfig.json
+++ b/apps/maelstorm/tsconfig.json
@@ -10,7 +10,10 @@
     "composite": true,
     "declaration": true
   },
-  "files": ["../../node_modules/@nx/react-native/typings/svg.d.ts"],
+  "files": [
+    "../../node_modules/@nx/react-native/typings/svg.d.ts",
+    "env.d.ts"
+  ],
   "include": [],
   "references": [
     {
