--- a/apps/maelstorm/package.json
+++ b/apps/maelstorm/package.json
@@ -40,6 +40,7 @@
     "use-debounce": "*",
     "react-redux": "*",
     "@reduxjs/toolkit": "*",
-    "dayjs": "*"
+    "dayjs": "*",
+    "react-native-config": "*"
   }
 }
