--- a/package.json
+++ b/package.json
@@ -10,21 +10,22 @@
     "@react-navigation/native-stack": "^6.9.13",
     "@react-navigation/stack": "^6.3.17",
     "@reduxjs/toolkit": "^1.9.5",
-    "@tamagui/animations-moti": "^1.39.5",
-    "@tamagui/config": "^1.39.5",
-    "@tamagui/react-native-media-driver": "^1.39.5",
-    "@tamagui/shorthands": "^1.39.5",
-    "@tamagui/themes": "^1.39.5",
-    "@tanstack/query-async-storage-persister": "^4.29.19",
-    "@tanstack/react-query": "^4.29.19",
-    "@tanstack/react-query-persist-client": "^4.29.19",
+    "@tamagui/animations-moti": "^1.43.8",
+    "@tamagui/config": "^1.43.8",
+    "@tamagui/react-native-media-driver": "^1.43.8",
+    "@tamagui/shorthands": "^1.43.8",
+    "@tamagui/themes": "^1.43.8",
+    "@tanstack/query-async-storage-persister": "^4.29.25",
+    "@tanstack/react-query": "^4.29.25",
+    "@tanstack/react-query-persist-client": "^4.29.25",
     "axios": "^1.4.0",
     "dayjs": "^1.11.9",
     "lodash": "^4.17.21",
     "moti": "^0.25.3",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "react-native": "0.71.12",
+    "react-native": "~0.71.12",
+    "react-native-config": "^1.5.1",
     "react-native-error-boundary": "^1.2.3",
     "react-native-exception-handler": "^2.10.10",
     "react-native-gesture-handler": "^2.12.0",
@@ -33,46 +34,51 @@
     "react-native-screens": "^3.22.1",
     "react-native-splash-screen": "^3.3.0",
     "react-redux": "^8.1.1",
-    "tamagui": "^1.39.5",
+    "tamagui": "^1.43.8",
     "tslib": "^2.3.0",
     "use-debounce": "^9.0.4"
   },
   "devDependencies": {
+    "@babel/core": "^7.12.9",
     "@babel/preset-react": "^7.14.5",
-    "@nx/detox": "16.5.0",
-    "@nx/eslint-plugin": "16.5.0",
-    "@nx/jest": "16.5.0",
-    "@nx/js": "16.5.0",
-    "@nx/linter": "16.5.0",
-    "@nx/react-native": "16.5.0",
-    "@nx/storybook": "16.5.0",
-    "@nx/workspace": "16.5.0",
-    "@react-native-async-storage/async-storage": "^1.18.2",
+    "@nx/detox": "16.5.2",
+    "@nx/eslint-plugin": "16.5.2",
+    "@nx/jest": "16.5.2",
+    "@nx/js": "16.5.2",
+    "@nx/linter": "16.5.2",
+    "@nx/react-native": "16.5.2",
+    "@nx/storybook": "16.5.2",
+    "@nx/workspace": "16.5.2",
+    "@react-native-async-storage/async-storage": "^1.19.0",
     "@react-native-community/cli": "10.2.2",
     "@react-native-community/cli-platform-android": "10.2.0",
     "@react-native-community/cli-platform-ios": "10.2.1",
-    "@storybook/addon-essentials": "6.5.4",
+    "@react-native-community/datetimepicker": "^7.4.0",
+    "@react-native-community/slider": "^4.4.2",
+    "@storybook/addon-actions": "^6.5.16",
+    "@storybook/addon-controls": "^6.5.16",
+    "@storybook/addon-essentials": "^6.5.16",
     "@storybook/addon-ondevice-actions": "^6.5.4",
     "@storybook/addon-ondevice-backgrounds": "^6.5.4",
     "@storybook/addon-ondevice-controls": "^6.5.4",
     "@storybook/addon-ondevice-notes": "^6.5.4",
-    "@storybook/core-server": "6.5.4",
+    "@storybook/core-server": "^6.5.16",
     "@storybook/react-native": "^6.5.4",
-    "@tamagui/babel-plugin": "^1.39.5",
+    "@tamagui/babel-plugin": "^1.43.8",
     "@testing-library/jest-dom": "5.16.5",
     "@testing-library/jest-native": "5.4.2",
     "@testing-library/react-native": "12.1.2",
-    "@types/jest": "^29.5.2",
-    "@types/node": "18.14.4",
-    "@types/react": "18.2.14",
+    "@types/jest": "^29.5.3",
+    "@types/node": "20.4.2",
+    "@types/react": "18.2.15",
     "@types/react-native": "^0.71.8",
-    "@typescript-eslint/eslint-plugin": "^5.61.0",
-    "@typescript-eslint/parser": "^5.61.0",
-    "babel-jest": "^29.4.1",
+    "@typescript-eslint/eslint-plugin": "^5.62.0",
+    "@typescript-eslint/parser": "^5.62.0",
+    "babel-jest": "^29.6.1",
     "babel-plugin-transform-inline-environment-variables": "^0.4.4",
     "cross-env": "^7.0.3",
-    "detox": "^20.9.0",
-    "eslint": "~8.44.0",
+    "detox": "^20.11.1",
+    "eslint": "~8.45.0",
     "eslint-config-airbnb-base": "^15.0.0",
     "eslint-config-prettier": "8.8.0",
     "eslint-config-promise": "^2.0.2",
@@ -87,21 +93,21 @@
     "jest-circus": "^29.6.1",
     "jest-environment-jsdom": "^29.6.1",
     "jest-react-native": "18.0.0",
-    "metro": "0.74.1",
-    "metro-babel-register": "0.74.1",
-    "metro-react-native-babel-preset": "0.74.1",
-    "metro-react-native-babel-transformer": "0.74.1",
-    "metro-resolver": "0.74.1",
-    "nx": "16.5.0",
+    "metro": "~0.74.1",
+    "metro-babel-register": "~0.74.1",
+    "metro-react-native-babel-preset": "~0.74.1",
+    "metro-react-native-babel-transformer": "~0.74.1",
+    "metro-resolver": "~0.74.1",
+    "nx": "16.5.2",
     "prettier": "^2.6.2",
-    "react-native-safe-area-context": "4.6.4",
+    "react-native-safe-area-context": "4.7.1",
     "react-native-svg": "13.10.0",
     "react-native-svg-transformer": "1.0.0",
     "react-test-renderer": "18.2.0",
     "ts-jest": "^29.1.1",
     "ts-node": "10.9.1",
     "typescript": "~5.1.6",
-    "verdaccio": "^5.0.4"
+    "verdaccio": "^5.26.0"
   },
   "nx": {
     "includedScripts": []
